--- a/Week5-Functions.html
+++ b/Week5-Functions.html
@@ -188,7 +188,7 @@ function faveFruit() {
     text = "Basic, but good."
     break
     default:
-    text = "I'm not too sure about that one.."
+    text = "I'm not too sure about that one..."
   }
   document.getElementById("answer").innerHTML = text // replace the answer text in our HTML
 }
