--- a/Week9-Dynamic Trials Pt3-answers.html
+++ b/Week9-Dynamic Trials Pt3-answers.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Week 9: Dynamic Trials Pt3</title>
-        <script src="jspsych-6.0.5/jspsych.js"></script>
+        <title>Week 9: Dynamic Trials 3</title>
+        <!-- Load JS psych -->
+        <script src="jspsych-7.2/jspsych.js"></script>
+
         <!-- Load all the plugins we will be using today -->
-        <script src="jspsych-6.0.5/plugins/jspsych-instructions.js"></script>
-        <script src="jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
-        <script src="jspsych-6.0.5/plugins/jspsych-html-button-response.js"></script>
+        <script src="jspsych-7.2/plugin-html-keyboard-response.js"></script>
+        <script src="jspsych-7.2/plugin-html-button-response.js"></script>
+
         <!-- Load jspsych's default CSS -->
-        <link href="jspsych-6.0.5/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+        <link href="jspsych-7.2/jspsych.css" rel="stylesheet" type="text/css"></link>
     </head>
     <body>
     </body>
     <script>
+
 // Overview of jspsych plugins: https://www.jspsych.org/plugins/overview/
 
+// Initialize jsPsych
+
+var jsPsych = initJsPsych({
+  on_finish: function() {
+    jsPsych.data.displayData(); // let's see the data in json format
+  }
+});
+
 // Define an empty timeline array
+
 var timeline = [];
 
 /*/ Define the trial variables /*/
 var welcome = {
-    type: 'html-keyboard-response',
-    stimulus: "Welcome to the study!<p>Please choose the correct category (dog or cat) for each animal.<p>"+
-    "Please try to respond as quickly as possible without sacrificing accuracy.<p>"+
-    "<p>Press ENTER to begin.",
+    type: jsPsychHtmlKeyboardResponse,
+    stimulus: `Welcome to the study!<p>
+    Please choose the correct category (dog or cat) for each animal.<p>
+    Please try to respond as quickly as possible without sacrificing accuracy.<p>
+    <p>Press ENTER to begin.`,
     choices: ['enter']
 };
 
@@ -39,24 +52,22 @@ var animals = jsPsych.randomization.shuffle(animals)
 
 // Show an image of a cat or a dog, with response buttons.
 var catdog = {
-    type: 'html-button-response',
+    type: jsPsychHtmlButtonResponse,
     stimulus: function() {
       current_animal = animals[count]
       count++
-      return '<img src = "'+ current_animal + '" width=200px></p>'
+      return `<img src = ${current_animal} width=200px></p>`
     },
     choices: ['Cat','Dog'],
-    trial_duration: function() {
-      return timeLimit
-    },
+    trial_duration: timeLimit
 };
 
 
 // Show post-trial feedback. We'll need to modify this.
 var feedback = {
-    type: 'html-keyboard-response',
+    type: jsPsychHtmlKeyboardResponse,
     stimulus: '?',
-    choices: jsPsych.NO_KEYS,
+    choices: "NO_KEYS",
     trial_duration: 1000,
 };
 
@@ -68,7 +79,7 @@ var feedback = {
 // Hint: how do we figure out what the image displayed was?
 
 var feedback1 = {
-    type: 'html-keyboard-response',
+    type: jsPsychHtmlKeyboardResponse,
     stimulus: function() {
       if (current_animal.includes("cat")) {
         return 'That was a cat!'
@@ -77,7 +88,7 @@ var feedback1 = {
         return 'That was a dog!'
       }
     },
-    choices: jsPsych.NO_KEYS,
+    choices: "NO_KEYS",
     trial_duration: 1000
 }
 
@@ -86,9 +97,9 @@ var feedback1 = {
 // Hint: take a look at jsPsych.data.getLastTrialData().values()[0]
 
 var feedback2 = {
-    type: 'html-keyboard-response',
+    type: jsPsychHtmlKeyboardResponse,
     stimulus: function() {
-      button_pressed = jsPsych.data.getLastTrialData().values()[0].button_pressed
+      button_pressed = jsPsych.data.getLastTrialData().values()[0].response
       if (button_pressed==0) {
         return 'You chose cat'
       } else if (button_pressed==1) {
@@ -97,17 +108,15 @@ var feedback2 = {
         return "You didn't respond in time"
       }
     },
-    choices: jsPsych.NO_KEYS,
+    choices: "NO_KEYS",
     trial_duration: 1000
 }
 
 // Challenge 3:
 // Change the feedback stimulus parameter so it says "Correct" or "Wrong" depending on whether the answer was correct or not.
 
-var correctness = []
-
 var feedback3 = {
-    type: 'html-keyboard-response',
+    type: jsPsychHtmlKeyboardResponse,
     stimulus: function() {
       // the shown animal
         shown = "dog"
@@ -115,7 +124,7 @@ var feedback3 = {
         shown = "cat"
       }
       // the chosen animal
-      button_pressed = jsPsych.data.getLastTrialData().values()[0].button_pressed
+      button_pressed = jsPsych.data.getLastTrialData().values()[0].response
       if (button_pressed==0) {
         chosen = "cat"
       } else if (button_pressed==1) {
@@ -132,7 +141,7 @@ var feedback3 = {
         return "Wrong!"
       }
     },
-    choices: jsPsych.NO_KEYS,
+    choices: "NO_KEYS",
     trial_duration: 1000,
     on_finish: function(data) {
       data.shown = shown;
@@ -154,7 +163,7 @@ for (i=0; i < animals.length; i++) {
 // 2. Show them their average performance at the end of the study e.g. 50% correct
 
 var ending = {
-    type: 'html-keyboard-response',
+    type: jsPsychHtmlKeyboardResponse,
     stimulus: function () {
       average = jsPsych.data.get().select('correct').mean();
       return "Your score was "+ average*100 + "%. <p>Press enter to finish the study."
@@ -164,26 +173,14 @@ var ending = {
 
 timeline.push(ending)
 
-// 3. Finally, assign them a random six digit number ###### and save their data as ######.csv instead of mydata.csv. Our experiment is complete!
-var sub_num = Math.floor(100000 + Math.random() * 900000);
-
-jsPsych.data.addProperties({
-  subject: sub_num
-})
 
 // Bonus: read the documentation for looping timelines here: https://www.jspsych.org/overview/timeline/#looping-timelines
 // Can we use this to repeat an catdog trial if the subject gets that trial wrong?
 
 /*/ Initialize the timeline /*/
 
-jsPsych.init({
-    timeline: timeline, // load our completed timeline
-    preload_images: animals, // load images before the experiment starts
-    on_finish: function() {
-      jsPsych.data.displayData('csv') // view data in csv format
-      jsPsych.data.get().localSave('csv',sub_num+'.csv'); // save the data in csv format in a file called 'mydata.csv' (format, filename)
-}
-})
+/*/ Run the timeline /*/
+jsPsych.run(timeline);
 
     </script>
 </html>
