--- a/Week8-Dynamic Trials Pt2-challenge.html
+++ b/Week8-Dynamic Trials Pt2-challenge.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <title>Week 8: Dynamic Trials 2</title>
-        <script src="jspsych-6.0.5/jspsych.js"></script>
+        <!-- Load JS psych -->
+        <script src="jspsych-7.2/jspsych.js"></script>
+
         <!-- Load all the plugins we will be using today -->
-        <script src="jspsych-6.0.5/plugins/jspsych-instructions.js"></script>
-        <script src="jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
-        <script src="jspsych-6.0.5/plugins/jspsych-html-button-response.js"></script>
+        <script src="jspsych-7.2/plugin-html-keyboard-response.js"></script>
+        <script src="jspsych-7.2/plugin-html-button-response.js"></script>
+
         <!-- Load jspsych's default CSS -->
-        <link href="jspsych-6.0.5/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+        <link href="jspsych-7.2/jspsych.css" rel="stylesheet" type="text/css"></link>
     </head>
     <body>
     </body>
@@ -20,16 +22,26 @@
 // Maybe you forgot it or never knew it.
 // The more important skill is knowing how to search for the solution..
 
+
+// Initialize jsPsych
+
+var jsPsych = initJsPsych({
+  on_finish: function() {
+    jsPsych.data.displayData();
+  }
+});
 // Define an empty timeline array
+
 var timeline = [];
 
 /*/ Define the trial variables /*/
 
 var welcome = {
-    type: 'html-keyboard-response',
-    stimulus: "Welcome to the study!<p>Please choose the correct category (dog or cat) for each animal.<p>"+
-    "Please try to respond as quickly as possible without sacrificing accuracy.<p>"+
-    "<p>Press ENTER to begin.",
+    type: jsPsychHtmlKeyboardResponse,
+    stimulus: `Welcome to the study!<p>
+    Please choose the correct category (dog or cat) for each animal.<p>
+    Please try to respond as quickly as possible without sacrificing accuracy.<p>
+    <p>Press ENTER to begin.`,
     choices: ['enter']
 };
 
@@ -45,24 +57,22 @@ var animals = jsPsych.randomization.shuffle(animals)
 
 // Show an image of a cat or a dog, with response buttons.
 var catdog = {
-    type: 'html-button-response',
+    type: jsPsychHtmlButtonResponse,
     stimulus: function() {
       current_animal = animals[count]
       count++
-      return '<img src = "'+ current_animal + '" width=200px></p>'
+      return `<img src = ${current_animal} width=200px></p>`
     },
     choices: ['Cat','Dog'],
-    trial_duration: function() {
-      return timeLimit
-    },
+    trial_duration: timeLimit
 };
 
 
 // Show post-trial feedback. We'll need to modify this.
 var feedback = {
-    type: 'html-keyboard-response',
+    type: jsPsychHtmlKeyboardResponse,
     stimulus: '?',
-    choices: jsPsych.NO_KEYS,
+    choices: "NO_KEYS",
     trial_duration: 1000,
 };
 
@@ -74,7 +84,7 @@ var feedback = {
 // Hint: how do we figure out what the image displayed was?
 
 var feedback1 = {
-    type: 'html-keyboard-response',
+    type: jsPsychHtmlKeyboardResponse,
     stimulus: function() {
       if (current_animal.includes("cat")) {
         return 'That was a cat!'
@@ -83,7 +93,7 @@ var feedback1 = {
         return 'That was a dog!'
       }
     },
-    choices: jsPsych.NO_KEYS,
+    choices: "NO_KEYS",
     trial_duration: 1000,
 };
 
@@ -103,16 +113,8 @@ for (i=0; i < animals.length; i++) {
 // Change the feedback stimulus parameter so it says "Correct" or "Wrong" depending on whether the answer was correct or not.
 
 
-/*/ Initialize the timeline /*/
-
-jsPsych.init({
-    timeline: timeline, // load our completed timeline
-    preload_images: animals, // load images before the experiment starts
-    on_finish: function() {
-      jsPsych.data.displayData('csv') // view data in csv format
-      // jsPsych.data.get().localSave('csv','mydata.csv'); // save the data in csv format in a file called 'mydata.csv'
-}
-})
+/*/ Run the timeline /*/
+jsPsych.run(timeline);
 
     </script>
 </html>
